--- a/MathStatCalcTask.ipynb
+++ b/MathStatCalcTask.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "MathStatCalcTask.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPaUgL+NbOQuRcIHrLwj3CU",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMrf2o8DGJ/gLnJsgUKJvwF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -477,7 +478,16 @@
       "source": [
         "$$№2$$\n",
         "\n",
-        "$$\\vec{X} \\sim U_{[0, 1]}$$"
+        "$$\\vec{X} \\sim U_{[0, 1]}$$\n",
+        "$b)\\space\\chi^2 \\space \\text{distance:}$\n",
+        "\n",
+        "$$d(F_n^*, F_o) = \\sum_\\limits{j = 1}^k \\frac{(\\nu_j - np_j)^2}{np_j},$$ \n",
+        "\n",
+        "$$\\nu_j = \\sum_\\limits{i = 1}^nI(X_i \\in \\Delta_j),$$\n",
+        "\n",
+        "$$(\\Delta_1,\\space\\cdots\\space,\\Delta_k),\\space \\Delta_j = [t_j\\space;\\space t_{j + 1})$$\n",
+        "\n",
+        "$$p_j = P_{H_o}(X_i \\in \\Delta_j) = F_o(t_{j+1}) - F_o(t_j),$$"
       ],
       "metadata": {
         "id": "vY6CUPmAgTs4"
