Создано с помощью Colaboratory

--- a/MathStatCalcTask.ipynb
+++ b/MathStatCalcTask.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN/X1gvBFlOkuvDOfLbHfYG",
+      "authorship_tag": "ABX9TyN+D6NjezRzWbEjwiG3YRjq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -19,7 +19,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "4be2f38fe453423cad794351b1abcee2": {
+        "7583be8c80684ae3b80d303474b0749c": {
           "model_module": "jupyter-matplotlib",
           "model_name": "MPLCanvasModel",
           "model_module_version": "^0.11",
@@ -48,15 +48,15 @@
             "capture_scroll": false,
             "footer_visible": true,
             "header_visible": true,
-            "layout": "IPY_MODEL_f07cc2a4aef340e497faa885d4d24d65",
+            "layout": "IPY_MODEL_34e063ce064e4d45bbfd26d67a5ef470",
             "pan_zoom_throttle": 33,
             "resizable": true,
-            "toolbar": "IPY_MODEL_7f131f284596458c9136a7694bd99d96",
+            "toolbar": "IPY_MODEL_a80850a8ede941d4baacbf01914fabe6",
             "toolbar_position": "left",
             "toolbar_visible": "fade-in-fade-out"
           }
         },
-        "f07cc2a4aef340e497faa885d4d24d65": {
+        "34e063ce064e4d45bbfd26d67a5ef470": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -108,7 +108,7 @@
             "width": null
           }
         },
-        "7f131f284596458c9136a7694bd99d96": {
+        "a80850a8ede941d4baacbf01914fabe6": {
           "model_module": "jupyter-matplotlib",
           "model_name": "ToolbarModel",
           "model_module_version": "^0.11",
@@ -124,7 +124,7 @@
             "_view_name": "ToolbarView",
             "button_style": "",
             "collapsed": true,
-            "layout": "IPY_MODEL_0a1d864dcde34bf6980ac98005f764c3",
+            "layout": "IPY_MODEL_24c9fdcf1a8c466090492a70fe4c75cb",
             "orientation": "vertical",
             "toolitems": [
               [
@@ -166,7 +166,7 @@
             ]
           }
         },
-        "0a1d864dcde34bf6980ac98005f764c3": {
+        "24c9fdcf1a8c466090492a70fe4c75cb": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -218,7 +218,117 @@
             "width": null
           }
         },
-        "f2077599de5b4b4a86aa5dacc05cbc74": {
+        "653cd976f38f42668d5f6cf66ecab044": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "df1cf6b8af7d40c9ba256b5f5748bcba": {
+          "model_module": "jupyter-matplotlib",
+          "model_name": "ToolbarModel",
+          "model_module_version": "^0.11",
+          "state": {
+            "_current_action": "",
+            "_dom_classes": [],
+            "_model_module": "jupyter-matplotlib",
+            "_model_module_version": "^0.11",
+            "_model_name": "ToolbarModel",
+            "_view_count": null,
+            "_view_module": "jupyter-matplotlib",
+            "_view_module_version": "^0.11",
+            "_view_name": "ToolbarView",
+            "button_style": "",
+            "collapsed": true,
+            "layout": "IPY_MODEL_653cd976f38f42668d5f6cf66ecab044",
+            "orientation": "vertical",
+            "toolitems": [
+              [
+                "Home",
+                "Reset original view",
+                "home",
+                "home"
+              ],
+              [
+                "Back",
+                "Back to previous view",
+                "arrow-left",
+                "back"
+              ],
+              [
+                "Forward",
+                "Forward to next view",
+                "arrow-right",
+                "forward"
+              ],
+              [
+                "Pan",
+                "Left button pans, Right button zooms\nx/y fixes axis, CTRL fixes aspect",
+                "arrows",
+                "pan"
+              ],
+              [
+                "Zoom",
+                "Zoom to rectangle\nx/y fixes axis",
+                "square-o",
+                "zoom"
+              ],
+              [
+                "Download",
+                "Download plot",
+                "floppy-o",
+                "save_figure"
+              ]
+            ]
+          }
+        },
+        "e3d38bd2388c43cba95b06bc5811ded7": {
           "model_module": "jupyter-matplotlib",
           "model_name": "MPLCanvasModel",
           "model_module_version": "^0.11",
@@ -247,15 +357,15 @@
             "capture_scroll": false,
             "footer_visible": true,
             "header_visible": true,
-            "layout": "IPY_MODEL_d823b27489904edbad75153d9e1a4de3",
+            "layout": "IPY_MODEL_0f8a65e5401549098d66dc80c42ceb7d",
             "pan_zoom_throttle": 33,
             "resizable": true,
-            "toolbar": "IPY_MODEL_5dac9d3632e74334a3e9f3984f88d688",
+            "toolbar": "IPY_MODEL_e1c00c922d984b8fa69044789fda9350",
             "toolbar_position": "left",
             "toolbar_visible": "fade-in-fade-out"
           }
         },
-        "d823b27489904edbad75153d9e1a4de3": {
+        "0f8a65e5401549098d66dc80c42ceb7d": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -307,7 +417,7 @@
             "width": null
           }
         },
-        "5dac9d3632e74334a3e9f3984f88d688": {
+        "e1c00c922d984b8fa69044789fda9350": {
           "model_module": "jupyter-matplotlib",
           "model_name": "ToolbarModel",
           "model_module_version": "^0.11",
@@ -323,7 +433,7 @@
             "_view_name": "ToolbarView",
             "button_style": "",
             "collapsed": true,
-            "layout": "IPY_MODEL_dda85b6b49e049e88d8df593e7b9c80c",
+            "layout": "IPY_MODEL_5caae719251245178e0d2789c6cf96a2",
             "orientation": "vertical",
             "toolitems": [
               [
@@ -365,7 +475,7 @@
             ]
           }
         },
-        "dda85b6b49e049e88d8df593e7b9c80c": {
+        "5caae719251245178e0d2789c6cf96a2": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -417,7 +527,7 @@
             "width": null
           }
         },
-        "c996677a829a46ecb4828753cab6ff56": {
+        "f3b752a7277c4892be20300b32668740": {
           "model_module": "jupyter-matplotlib",
           "model_name": "MPLCanvasModel",
           "model_module_version": "^0.11",
@@ -446,15 +556,15 @@
             "capture_scroll": false,
             "footer_visible": true,
             "header_visible": true,
-            "layout": "IPY_MODEL_5474b713ab5847798e0e7623e82589df",
+            "layout": "IPY_MODEL_688174266e42431cabb1e4c08dda9ae2",
             "pan_zoom_throttle": 33,
             "resizable": true,
-            "toolbar": "IPY_MODEL_3ee0a58efdb64908b6aa098cc9a809b4",
+            "toolbar": "IPY_MODEL_be1f6c920d6b44bba072de1c5adac1b9",
             "toolbar_position": "left",
             "toolbar_visible": "fade-in-fade-out"
           }
         },
-        "5474b713ab5847798e0e7623e82589df": {
+        "688174266e42431cabb1e4c08dda9ae2": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -506,7 +616,7 @@
             "width": null
           }
         },
-        "3ee0a58efdb64908b6aa098cc9a809b4": {
+        "be1f6c920d6b44bba072de1c5adac1b9": {
           "model_module": "jupyter-matplotlib",
           "model_name": "ToolbarModel",
           "model_module_version": "^0.11",
@@ -522,7 +632,7 @@
             "_view_name": "ToolbarView",
             "button_style": "",
             "collapsed": true,
-            "layout": "IPY_MODEL_9a4ae1e132e3425d86fde954eb5e1229",
+            "layout": "IPY_MODEL_b3f760241cc645efacb61b6c07c2774f",
             "orientation": "vertical",
             "toolitems": [
               [
@@ -564,7 +674,7 @@
             ]
           }
         },
-        "9a4ae1e132e3425d86fde954eb5e1229": {
+        "b3f760241cc645efacb61b6c07c2774f": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -616,7 +726,7 @@
             "width": null
           }
         },
-        "4a5f7337517045a6bfa42b2988483619": {
+        "fdb506c8c47747ddad7bc7ae4b7195de": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -668,7 +778,7 @@
             "width": null
           }
         },
-        "30de929a6b7b4a679e55cc1b20a690d8": {
+        "83ecedcd29bf479a9b09f421e40eab12": {
           "model_module": "jupyter-matplotlib",
           "model_name": "ToolbarModel",
           "model_module_version": "^0.11",
@@ -684,7 +794,7 @@
             "_view_name": "ToolbarView",
             "button_style": "",
             "collapsed": true,
-            "layout": "IPY_MODEL_4a5f7337517045a6bfa42b2988483619",
+            "layout": "IPY_MODEL_fdb506c8c47747ddad7bc7ae4b7195de",
             "orientation": "vertical",
             "toolitems": [
               [
@@ -752,7 +862,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#!pip install ipympl"
+        "#!pip install ipympl # uncomment at first launch"
       ],
       "metadata": {
         "id": "NH5ukJFyDuyX"
@@ -1448,7 +1558,6 @@
         "def varianceHypothesis():\n",
         "  f1 = f.ppf(epsilon / 2, n3_1 - 1, n3_2 - 1)\n",
         "  f2 = f.ppf(1 - epsilon / 2, n3_1 - 1, n3_2 - 1)\n",
-        "  print(epsilon)\n",
         "  sampleMean1 = 0\n",
         "  sampleMean2 = 0\n",
         "\n",
@@ -1560,40 +1669,8 @@
       "metadata": {
         "id": "23XrlBW7BByv"
       },
-      "execution_count": 32,
+      "execution_count": 24,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from scipy.stats import norm\n",
-        "from scipy.stats.distributions import chi2\n",
-        "#chi2.ppf(0.005, df=49)\n",
-        "#norm.ppf(0.995)\n",
-        "#t.ppf(0.95, 49)\n",
-        "#klm.ppf(0.95)\n",
-        "chi2.ppf(0.95, 4)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mlbkigOrophZ",
-        "outputId": "889cb763-215b-4b09-fa44-26fd749390af"
-      },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "9.487729036781154"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 25
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1619,9 +1696,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9833o7fvD_fm",
-        "outputId": "9a1233a3-7528-411a-80aa-8e12c285169e"
+        "outputId": "75764453-b1f7-4472-ff58-1873ce0cbb7e"
       },
-      "execution_count": 26,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1666,16 +1743,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 412,
           "referenced_widgets": [
-            "4be2f38fe453423cad794351b1abcee2",
-            "f07cc2a4aef340e497faa885d4d24d65",
-            "7f131f284596458c9136a7694bd99d96",
-            "0a1d864dcde34bf6980ac98005f764c3"
+            "7583be8c80684ae3b80d303474b0749c",
+            "34e063ce064e4d45bbfd26d67a5ef470",
+            "a80850a8ede941d4baacbf01914fabe6",
+            "24c9fdcf1a8c466090492a70fe4c75cb",
+            "653cd976f38f42668d5f6cf66ecab044",
+            "df1cf6b8af7d40c9ba256b5f5748bcba"
           ]
         },
         "id": "H-_sMPfAjCEL",
-        "outputId": "ab7d3d57-f90e-429e-ca15-b153105e3eeb"
+        "outputId": "cae48f64-be54-4b1c-fe97-b3e53ab3c7f6"
       },
-      "execution_count": 27,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1705,7 +1784,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "4be2f38fe453423cad794351b1abcee2"
+              "model_id": "7583be8c80684ae3b80d303474b0749c"
             }
           },
           "metadata": {
@@ -1732,16 +1811,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 412,
           "referenced_widgets": [
-            "f2077599de5b4b4a86aa5dacc05cbc74",
-            "d823b27489904edbad75153d9e1a4de3",
-            "5dac9d3632e74334a3e9f3984f88d688",
-            "dda85b6b49e049e88d8df593e7b9c80c"
+            "e3d38bd2388c43cba95b06bc5811ded7",
+            "0f8a65e5401549098d66dc80c42ceb7d",
+            "e1c00c922d984b8fa69044789fda9350",
+            "5caae719251245178e0d2789c6cf96a2"
           ]
         },
         "id": "ozyfuSXdivO-",
-        "outputId": "297242a8-a356-40f9-b426-2cce1284dffb"
+        "outputId": "daa1c53a-caa5-4a68-fdc4-0e22734bf44d"
       },
-      "execution_count": 28,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1771,7 +1850,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "f2077599de5b4b4a86aa5dacc05cbc74"
+              "model_id": "e3d38bd2388c43cba95b06bc5811ded7"
             }
           },
           "metadata": {
@@ -1798,18 +1877,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 394,
           "referenced_widgets": [
-            "c996677a829a46ecb4828753cab6ff56",
-            "5474b713ab5847798e0e7623e82589df",
-            "3ee0a58efdb64908b6aa098cc9a809b4",
-            "9a4ae1e132e3425d86fde954eb5e1229",
-            "4a5f7337517045a6bfa42b2988483619",
-            "30de929a6b7b4a679e55cc1b20a690d8"
+            "f3b752a7277c4892be20300b32668740",
+            "688174266e42431cabb1e4c08dda9ae2",
+            "be1f6c920d6b44bba072de1c5adac1b9",
+            "b3f760241cc645efacb61b6c07c2774f",
+            "fdb506c8c47747ddad7bc7ae4b7195de",
+            "83ecedcd29bf479a9b09f421e40eab12"
           ]
         },
         "id": "GXBy03qVhfr_",
-        "outputId": "556b6180-ffa2-43c4-8799-d7191f4aebfd"
+        "outputId": "3c448dc9-c49f-4085-f009-774c8021b246"
       },
-      "execution_count": 29,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1838,7 +1917,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "c996677a829a46ecb4828753cab6ff56"
+              "model_id": "f3b752a7277c4892be20300b32668740"
             }
           },
           "metadata": {
@@ -1856,46 +1935,26 @@
     {
       "cell_type": "code",
       "source": [
-        "varianceHypothesis()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Rug6LsYrfcSY",
-        "outputId": "beddac24-d344-4f52-add5-82bf74175577"
-      },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0.05\n",
-            "Empirical significance of the Fisher criterion =  1.07\n",
-            "The variances are equal!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(\"Task #3\")\n",
+        "varianceHypothesis()\n",
         "mathExpectationHypothesis()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2e-ZHHrWHdda",
-        "outputId": "069f0be2-fbce-4adc-814c-3068c23861cd"
+        "id": "Rug6LsYrfcSY",
+        "outputId": "c8641674-edcd-4a44-88ab-b4cd0b30ed56"
       },
-      "execution_count": 33,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Task #3\n",
+            "Empirical significance of the Fisher criterion =  1.07\n",
+            "The variances are equal!\n",
             "d =  0.771\n",
             "The mathematical expectation are equal!\n"
           ]
