Создано с помощью Colaboratory

--- a/MathStatCalcTask.ipynb
+++ b/MathStatCalcTask.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN+D6NjezRzWbEjwiG3YRjq",
+      "authorship_tag": "ABX9TyNLgCB046emP0OinzzKabfP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -19,7 +19,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "7583be8c80684ae3b80d303474b0749c": {
+        "222f114934794aa4b7728722fb2069fa": {
           "model_module": "jupyter-matplotlib",
           "model_name": "MPLCanvasModel",
           "model_module_version": "^0.11",
@@ -48,15 +48,15 @@
             "capture_scroll": false,
             "footer_visible": true,
             "header_visible": true,
-            "layout": "IPY_MODEL_34e063ce064e4d45bbfd26d67a5ef470",
+            "layout": "IPY_MODEL_948b8b2ce23343d68470a93d7c3a2311",
             "pan_zoom_throttle": 33,
             "resizable": true,
-            "toolbar": "IPY_MODEL_a80850a8ede941d4baacbf01914fabe6",
+            "toolbar": "IPY_MODEL_066f99d0b66b40f885b6ece81257075e",
             "toolbar_position": "left",
             "toolbar_visible": "fade-in-fade-out"
           }
         },
-        "34e063ce064e4d45bbfd26d67a5ef470": {
+        "948b8b2ce23343d68470a93d7c3a2311": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -108,7 +108,7 @@
             "width": null
           }
         },
-        "a80850a8ede941d4baacbf01914fabe6": {
+        "066f99d0b66b40f885b6ece81257075e": {
           "model_module": "jupyter-matplotlib",
           "model_name": "ToolbarModel",
           "model_module_version": "^0.11",
@@ -124,7 +124,7 @@
             "_view_name": "ToolbarView",
             "button_style": "",
             "collapsed": true,
-            "layout": "IPY_MODEL_24c9fdcf1a8c466090492a70fe4c75cb",
+            "layout": "IPY_MODEL_a1a665de71d944f994ad1f68855c0184",
             "orientation": "vertical",
             "toolitems": [
               [
@@ -166,7 +166,7 @@
             ]
           }
         },
-        "24c9fdcf1a8c466090492a70fe4c75cb": {
+        "a1a665de71d944f994ad1f68855c0184": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -218,117 +218,7 @@
             "width": null
           }
         },
-        "653cd976f38f42668d5f6cf66ecab044": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "df1cf6b8af7d40c9ba256b5f5748bcba": {
-          "model_module": "jupyter-matplotlib",
-          "model_name": "ToolbarModel",
-          "model_module_version": "^0.11",
-          "state": {
-            "_current_action": "",
-            "_dom_classes": [],
-            "_model_module": "jupyter-matplotlib",
-            "_model_module_version": "^0.11",
-            "_model_name": "ToolbarModel",
-            "_view_count": null,
-            "_view_module": "jupyter-matplotlib",
-            "_view_module_version": "^0.11",
-            "_view_name": "ToolbarView",
-            "button_style": "",
-            "collapsed": true,
-            "layout": "IPY_MODEL_653cd976f38f42668d5f6cf66ecab044",
-            "orientation": "vertical",
-            "toolitems": [
-              [
-                "Home",
-                "Reset original view",
-                "home",
-                "home"
-              ],
-              [
-                "Back",
-                "Back to previous view",
-                "arrow-left",
-                "back"
-              ],
-              [
-                "Forward",
-                "Forward to next view",
-                "arrow-right",
-                "forward"
-              ],
-              [
-                "Pan",
-                "Left button pans, Right button zooms\nx/y fixes axis, CTRL fixes aspect",
-                "arrows",
-                "pan"
-              ],
-              [
-                "Zoom",
-                "Zoom to rectangle\nx/y fixes axis",
-                "square-o",
-                "zoom"
-              ],
-              [
-                "Download",
-                "Download plot",
-                "floppy-o",
-                "save_figure"
-              ]
-            ]
-          }
-        },
-        "e3d38bd2388c43cba95b06bc5811ded7": {
+        "673abd8ccaec47148b565fff0016e88d": {
           "model_module": "jupyter-matplotlib",
           "model_name": "MPLCanvasModel",
           "model_module_version": "^0.11",
@@ -357,15 +247,15 @@
             "capture_scroll": false,
             "footer_visible": true,
             "header_visible": true,
-            "layout": "IPY_MODEL_0f8a65e5401549098d66dc80c42ceb7d",
+            "layout": "IPY_MODEL_c0114a79b1174aad96bab3b0a0b95c47",
             "pan_zoom_throttle": 33,
             "resizable": true,
-            "toolbar": "IPY_MODEL_e1c00c922d984b8fa69044789fda9350",
+            "toolbar": "IPY_MODEL_65603010903941e8990f01d2ca381417",
             "toolbar_position": "left",
             "toolbar_visible": "fade-in-fade-out"
           }
         },
-        "0f8a65e5401549098d66dc80c42ceb7d": {
+        "c0114a79b1174aad96bab3b0a0b95c47": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -417,7 +307,7 @@
             "width": null
           }
         },
-        "e1c00c922d984b8fa69044789fda9350": {
+        "65603010903941e8990f01d2ca381417": {
           "model_module": "jupyter-matplotlib",
           "model_name": "ToolbarModel",
           "model_module_version": "^0.11",
@@ -433,7 +323,7 @@
             "_view_name": "ToolbarView",
             "button_style": "",
             "collapsed": true,
-            "layout": "IPY_MODEL_5caae719251245178e0d2789c6cf96a2",
+            "layout": "IPY_MODEL_07944386cb91423baf807ccecdaef80a",
             "orientation": "vertical",
             "toolitems": [
               [
@@ -475,7 +365,7 @@
             ]
           }
         },
-        "5caae719251245178e0d2789c6cf96a2": {
+        "07944386cb91423baf807ccecdaef80a": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -527,7 +417,7 @@
             "width": null
           }
         },
-        "f3b752a7277c4892be20300b32668740": {
+        "5a8390ed99154e40b461ae2b37bc7d68": {
           "model_module": "jupyter-matplotlib",
           "model_name": "MPLCanvasModel",
           "model_module_version": "^0.11",
@@ -556,15 +446,15 @@
             "capture_scroll": false,
             "footer_visible": true,
             "header_visible": true,
-            "layout": "IPY_MODEL_688174266e42431cabb1e4c08dda9ae2",
+            "layout": "IPY_MODEL_351cd55413c74ed89c87abdefc2bd2f8",
             "pan_zoom_throttle": 33,
             "resizable": true,
-            "toolbar": "IPY_MODEL_be1f6c920d6b44bba072de1c5adac1b9",
+            "toolbar": "IPY_MODEL_341ac805862b43249f864db6c8063a74",
             "toolbar_position": "left",
             "toolbar_visible": "fade-in-fade-out"
           }
         },
-        "688174266e42431cabb1e4c08dda9ae2": {
+        "351cd55413c74ed89c87abdefc2bd2f8": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -616,7 +506,7 @@
             "width": null
           }
         },
-        "be1f6c920d6b44bba072de1c5adac1b9": {
+        "341ac805862b43249f864db6c8063a74": {
           "model_module": "jupyter-matplotlib",
           "model_name": "ToolbarModel",
           "model_module_version": "^0.11",
@@ -632,7 +522,7 @@
             "_view_name": "ToolbarView",
             "button_style": "",
             "collapsed": true,
-            "layout": "IPY_MODEL_b3f760241cc645efacb61b6c07c2774f",
+            "layout": "IPY_MODEL_eadebb0b066b4d138e893d9be8a202ef",
             "orientation": "vertical",
             "toolitems": [
               [
@@ -674,7 +564,7 @@
             ]
           }
         },
-        "b3f760241cc645efacb61b6c07c2774f": {
+        "eadebb0b066b4d138e893d9be8a202ef": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -726,7 +616,7 @@
             "width": null
           }
         },
-        "fdb506c8c47747ddad7bc7ae4b7195de": {
+        "2adb58f13d1a49ec9f8faf1bb47cfce9": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -778,7 +668,7 @@
             "width": null
           }
         },
-        "83ecedcd29bf479a9b09f421e40eab12": {
+        "701994d15adc4499ad896df751804489": {
           "model_module": "jupyter-matplotlib",
           "model_name": "ToolbarModel",
           "model_module_version": "^0.11",
@@ -794,7 +684,7 @@
             "_view_name": "ToolbarView",
             "button_style": "",
             "collapsed": true,
-            "layout": "IPY_MODEL_fdb506c8c47747ddad7bc7ae4b7195de",
+            "layout": "IPY_MODEL_2adb58f13d1a49ec9f8faf1bb47cfce9",
             "orientation": "vertical",
             "toolitems": [
               [
@@ -1656,7 +1546,8 @@
         "  for number in task3_2Data:\n",
         "    sampleVariace2 += (number - sampleMean2) ** 2 / n3_2\n",
         "\n",
-        "  d = (sampleMean1 - sampleMean2) * math.sqrt((n3_1 + n3_2 - 2) * n3_1 * n3_2) / math.sqrt((n3_1 * sampleVariace1 + n3_2 * sampleVariace2) * (n3_1 + n3_2))\n",
+        "  d = (sampleMean1 - sampleMean2) * math.sqrt((n3_1 + n3_2 - 2) * n3_1 * n3_2) \n",
+        "  d /= math.sqrt((n3_1 * sampleVariace1 + n3_2 * sampleVariace2) * (n3_1 + n3_2))\n",
         "  c = t.ppf(1 - epsilon / 2, n3_1 + n3_2 - 2)\n",
         "\n",
         "  print(\"d = \", round(d, 3))\n",
@@ -1696,7 +1587,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9833o7fvD_fm",
-        "outputId": "75764453-b1f7-4472-ff58-1873ce0cbb7e"
+        "outputId": "ec0e802f-f1dd-47e2-b7c2-f67239ae8f12"
       },
       "execution_count": 25,
       "outputs": [
@@ -1743,16 +1634,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 412,
           "referenced_widgets": [
-            "7583be8c80684ae3b80d303474b0749c",
-            "34e063ce064e4d45bbfd26d67a5ef470",
-            "a80850a8ede941d4baacbf01914fabe6",
-            "24c9fdcf1a8c466090492a70fe4c75cb",
-            "653cd976f38f42668d5f6cf66ecab044",
-            "df1cf6b8af7d40c9ba256b5f5748bcba"
+            "222f114934794aa4b7728722fb2069fa",
+            "948b8b2ce23343d68470a93d7c3a2311",
+            "066f99d0b66b40f885b6ece81257075e",
+            "a1a665de71d944f994ad1f68855c0184"
           ]
         },
         "id": "H-_sMPfAjCEL",
-        "outputId": "cae48f64-be54-4b1c-fe97-b3e53ab3c7f6"
+        "outputId": "fd7898c8-6c1b-4fd9-f9b9-d2f4609a83d6"
       },
       "execution_count": 26,
       "outputs": [
@@ -1784,7 +1673,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "7583be8c80684ae3b80d303474b0749c"
+              "model_id": "222f114934794aa4b7728722fb2069fa"
             }
           },
           "metadata": {
@@ -1811,14 +1700,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 412,
           "referenced_widgets": [
-            "e3d38bd2388c43cba95b06bc5811ded7",
-            "0f8a65e5401549098d66dc80c42ceb7d",
-            "e1c00c922d984b8fa69044789fda9350",
-            "5caae719251245178e0d2789c6cf96a2"
+            "673abd8ccaec47148b565fff0016e88d",
+            "c0114a79b1174aad96bab3b0a0b95c47",
+            "65603010903941e8990f01d2ca381417",
+            "07944386cb91423baf807ccecdaef80a"
           ]
         },
         "id": "ozyfuSXdivO-",
-        "outputId": "daa1c53a-caa5-4a68-fdc4-0e22734bf44d"
+        "outputId": "147a9ce7-485d-428f-9e89-4c5c944f94c7"
       },
       "execution_count": 27,
       "outputs": [
@@ -1850,7 +1739,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "e3d38bd2388c43cba95b06bc5811ded7"
+              "model_id": "673abd8ccaec47148b565fff0016e88d"
             }
           },
           "metadata": {
@@ -1877,16 +1766,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 394,
           "referenced_widgets": [
-            "f3b752a7277c4892be20300b32668740",
-            "688174266e42431cabb1e4c08dda9ae2",
-            "be1f6c920d6b44bba072de1c5adac1b9",
-            "b3f760241cc645efacb61b6c07c2774f",
-            "fdb506c8c47747ddad7bc7ae4b7195de",
-            "83ecedcd29bf479a9b09f421e40eab12"
+            "5a8390ed99154e40b461ae2b37bc7d68",
+            "351cd55413c74ed89c87abdefc2bd2f8",
+            "341ac805862b43249f864db6c8063a74",
+            "eadebb0b066b4d138e893d9be8a202ef",
+            "2adb58f13d1a49ec9f8faf1bb47cfce9",
+            "701994d15adc4499ad896df751804489"
           ]
         },
         "id": "GXBy03qVhfr_",
-        "outputId": "3c448dc9-c49f-4085-f009-774c8021b246"
+        "outputId": "c2c6295b-f110-4aec-f0c6-cde317af4e4b"
       },
       "execution_count": 28,
       "outputs": [
@@ -1917,7 +1806,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "f3b752a7277c4892be20300b32668740"
+              "model_id": "5a8390ed99154e40b461ae2b37bc7d68"
             }
           },
           "metadata": {
@@ -1944,7 +1833,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rug6LsYrfcSY",
-        "outputId": "c8641674-edcd-4a44-88ab-b4cd0b30ed56"
+        "outputId": "c644143c-33a2-4b3c-dca5-5a3307cb2009"
       },
       "execution_count": 29,
       "outputs": [
