Calculation assignment in mathematical statistics of NSU Faculty of Information Technology 4th semester

--- a/MathStatCalcTask.ipynb
+++ b/MathStatCalcTask.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYX5XyDCuPuqPnE7unmyHo",
+      "authorship_tag": "ABX9TyMJOnmmC/jqnn/cZ4B2vZ7V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -745,8 +745,8 @@
         "\\end{cases}$$\n",
         "$$$$\n",
         "$$\\begin{cases}\n",
-        "  F_{n - 1, n - 2}(f_1) = \\frac{\\varepsilon}{2}\\\\\n",
-        "  F_{n - 1, n - 2}(f_2) = 1 - \\frac{\\varepsilon}{2}\n",
+        "  F_{n - 1, m - 1}(f_1) = \\frac{\\varepsilon}{2}\\\\\n",
+        "  F_{n - 1, m - 1}(f_2) = 1 - \\frac{\\varepsilon}{2}\n",
         "\\end{cases}$$"
       ],
       "metadata": {
